--- a/index.html
+++ b/index.html
@@ -114,13 +114,16 @@
 	</div>
 </div>
 <div id="countdownContainer">
-	<img id="nationalLogo" src="img/2000px-Tunisia_logo.svg.png"></img>
+	<img id="nationalLogo" src="img/CAF-Logo-1024x953.preview.png"></img>
 	<div id="countdowntext">National Team Next Match</div>
 	<div id="countdown" ng-app='app'>
     		<span id="counting" countdown='' date='December 15, 2016 16:00:00'>&nbsp;</span>
     		<div id="days">D</div><div id="hour">H</div><div id="minutes">M</div><div id="seconds">S</div>
 	</div>
-	<img id="oppenentLogo" src="img/D.R.-Congo.png"></img>
+	<img id="tl" src="img/2000px-Tunisia_logo.svg.png"></img>
+	<!--<div id="vs">Vs</div>-->
+	<img id="gl" src="img/Guinea.png"></img>
+	<img id="oppenentLogo" src="img/CAF-Logo-1024x953.preview.png"></img>
 </div>
 <div id="PlayerOfMonthContainer">
 <div id="textPlayer">Choose The Best Player Of The Month</div>
